Mon May 07 17:13:35 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.c: fix selection dialog issues

Mon May 07 19:44:49 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.c: attempt at fixingone of the icon entry issues.
	  It may have been easier to just rewrite the damn thing.

Thu May 03 18:29:11 2001  George Lebl <jirka@5z.com>

	* menu-fentry.c: use the strcasecmp_no_locale function as the normal
	  one sucks donkeydung in some locales.

Thu May 03 00:08:22 2001  George Lebl <jirka@5z.com>

	* aligned-widget.c: dragging an aligned widget around an offset
	  screen now works

	* basep-widget.[ch]: add a screen_change signal

	* border-widget.c: minor cleanup

	* menu-fentry.c: fix a warning

Sun Apr 29 03:30:12 2001  George Lebl <jirka@5z.com>

	* extern.c: cut down the "loading applet" icon to 14x14 since 18
	  was still too big for drivemounts.

Thu Apr 26 16:30:33 2001  George Lebl <jirka@5z.com>

	* menu.c: fix a typo

Tue Apr 24 19:09:55 2001  George Lebl <jirka@5z.com>

	* Applying some of the ximian patches

	* menu-fentry.c:  in fr_is_subdir, check for nullity or
	  emptiness of the superdir

	* foobar-widget.c, tasklist_icon.c:  Shade iconified tasks in
	  the foobar tasklist

	* menu.c:  Add "Edit menus..." item to the "Panel" menu

	* menu-fentry.[ch], menu.c:  Allow a "Separator" .desktop type
	  to properly read the ximian menus apparently

	* menu.c:  Use gnome/apps rather then gnome/apps/ for adding
	  menus to panel

Tue Apr 24 13:55:29 2001  George Lebl <jirka@5z.com>

	* session.c: If we can find an installed mozilla desktop file,
	  then use it for the default config.  Only if we fail use the
	  Netscape.desktop, which will by default launch mozilla anyway,
	  but has a tendency to confuse RMS.  Which reminds me the
	  Netscape.desktop.

Tue Apr 24 13:41:08 2001  George Lebl <jirka@5z.com>

	* session.c:  Most people hate the lock/logout buttons for their
	  uselessness.  So in the default config I replaced it with the